# TaleWeaver-test

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_INSTRUCTIONS.md  Dockerfile  HOW_IT_WORKS.md  LICENSE  QUICKSTART.md  README.md  README_03112026.md  SECURITY.md  cloudbuild.yaml  deployment-commands-to-run.md  main.py  pyproject.toml  start.sh
.github/workflows/: deploy.yml
backend/: .env.example  Dockerfile  characters.py  image_gen.py  main.py  proxy.py  requirements.txt  scene_detector.py  story_planner.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
implementation/: LOVABLE_PROMPT.md  LOVABLE_PROMPT_V2_CHARACTER_ART.md  NEW_PLAN.md  NEXT_STEPS.md  PHASE_0_CHARACTER_SELECTION.md  PHASE_10_STORY_GALLERY.md  PHASE_1_LIVE_API_BACKEND.md  PHASE_2_AUDIO_STREAMING.md  PHASE_3_STORY_VISUALIZATION.md  PHASE_4_CHARACTER_ANIMATION.md  PHASE_5_STORY_INTELLIGENCE.md  PHASE_6_DEPLOYMENT.md  PHASE_8_SMARTER_IMAGE_TIMING.md  PHASE_9_RIVE_AVATARS.md  PLAN.md  VISION.md  _PHASE_0_CHARACTER_SELECTION.md  _PHASE_1_LIVE_API_BACKEND.md  _PHASE_4_5_THEME_SELECTION.md  _PHASE_4_6_CONTENT_MODERATION.md  _PHASE_5_STORY_PREWARM.md  _PHASE_6_DEPLOYMENT.md  _PHASE_7_1_CAMERA_VISION.md  _PHASE_7_2_MOVEMENT_CHALLENGES.md  _PHASE_7_3_STORY_BRANCHING.md  _PHASE_7_4_BADGE_SYSTEM.md  challenges.md
notebooks/: image-generation-flow.md  step2_session_flow.py  taleweaver_flow.ipynb
testing/: taleweaver_full_flow.ipynb
(+22 files in other folders)
