[project]
name = "taleweaver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "certifi>=2024.0.0",
    "fastapi>=0.115.0",
    "google-adk>=1.26.0",
    "google-auth>=2.32.0",
    "google-cloud-aiplatform>=1.60.0",
    "google-genai>=1.10.0",
    "ipykernel>=7.2.0",
    "opik>=1.0.0",
    "pillow>=12.1.1",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.55.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]
